service-db.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: nextcloud-db
  name: nextcloud-db-service
spec:
  ports: 
  - port: 3306
    protocol: TCP
  selector:
    app: nextcloud-db
