service-server.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: nextcloud-server
  name: nextcloud-server-service
spec:
  ports:
  - port: 80 
    protocol: TCP
    targetPort: 80
  selector:
    app: nextcloud-server
